plugins {
    id 'net.neoforged.moddev' apply false
    id 'org.jetbrains.kotlin.jvm' apply false
    id 'org.shsts.checksource' apply false
}

subprojects {
    group = 'org.shsts.tinactory'
    version = "${minecraft_version}-${mod_version}"

    apply plugin: 'checkstyle'
    apply plugin: 'eclipse'
    apply plugin: 'net.neoforged.moddev'
    apply plugin: 'maven-publish'

    java {
        toolchain.languageVersion = JavaLanguageVersion.of(21)
    }

    checkstyle {
        toolVersion = checkstyle_version
    }

    tasks.withType(Checkstyle).configureEach {
        classpath = files()
    }

    neoForge {
        version = neo_version
        parchment {
            minecraftVersion = minecraft_version
            mappingsVersion = parchment_version
        }
    }

    repositories {
        mavenCentral()
        maven {
            name = 'NeoForged'
            url = 'https://maven.neoforged.net/releases'
        }
        maven {
            name = 'ParchmentMC'
            url = 'https://maven.parchmentmc.org'
        }
        maven {
            // location of the maven that hosts JEI files since January 2023
            name = "Jared's maven"
            url = "https://maven.blamejared.com/"
        }
        maven {
            name = 'FTB'
            url = 'https://maven.ftb.dev/releases'
        }
        maven {
            name = 'Architectury'
            url = 'https://maven.architectury.dev'
        }
        maven {
            url = 'https://cursemaven.com'
            content {
                includeGroup "curse.maven"
            }
        }
        maven {
            name = 'Kotlin for Forge'
            url = 'https://thedarkcolour.github.io/KotlinForForge/'
        }
        maven {
            name = 'shsts'
            url = 'https://www.shsts.org/m2'
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
        options.release = 21
    }

    processResources {
        inputs.property 'mod_version', version
        filesMatching('META-INF/neoforge.mods.toml') {
            expand 'mod_version': "${version}"
        }
    }

    publishing {
        repositories {
            if (project.findProperty('shstsUser')) {
                maven {
                    name = 'shsts'
                    url = 'https://www.shsts.org/m2'
                    credentials {
                        username = project.findProperty('shstsUser')
                        password = project.findProperty('shstsPassword') ?: ''
                    }
                }
            }
        }
    }
}

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
println "Minecraft: ${minecraft_version}, NeoForge: ${neo_version}, ModDevGradle: ${moddev_version}"
